# GenericSpatialDataStructure

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: googletest-download.cmake  googletest.cmake  si_build_options.cmake
data/: easy_jet.pcd  easy_jet.ply  teapot.pcd
docs/: pcd.md
examples/: CMakeLists.txt  ExBitTwiddling.cpp  ExOctree.cpp  ExOctreeOpenGL.cpp  ExPCDIO.cpp  ExQuadtree.cpp  ExSpaceFillingCurve.cpp  NewQuadTree.cpp
include/: SpaceFillingCurve.hpp
include/spatial_data_structure/: BitTwiddling.hpp  Octree.hpp  Quadtree.hpp
include/spatial_indexing/: BitTwiddling.hpp  Octree.hpp  Quadtree.hpp  SpaceFillingCurve.hpp
include/spatial_partioning/: BitTwiddling.hpp  NewQuadtree.hpp  Octree.hpp  PointCloud.hpp  QuadOctreeBase.hpp  Quadtree.hpp
include/spatial_partioning/utility/: PCDInOut.hpp
src/: CMakeLists.txt
src/spatial_data_structure/: Octree.cpp  Quadtree.cpp
src/spatial_indexing/: Octree.cpp  Quadtree.cpp
src/spatial_partioning/: Octree.cpp  Quadtree.cpp
tests/: CMakeLists.txt  TestOctree.cpp  TestQuadtree.cpp  TestSpaceFillingCurve.cpp
